--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,95 @@
+.navbar-brand{
+font-family: 'Ubuntu', sans-serif;
+font-size: 2em;
+font-weight: bold;
+color: #fff;
+}
 
+.custom-nav .custom-nav-item a{
+    color: #fff !important; 
+}
+
+.container-fluid{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.background{
+    height: 100%;
+    width: 100%;
+    background: url("../image/background.jpg")
+}
+
+.custom-nav-item:hover{
+    background-color: #dc3545;
+    border: solid #dc3545 1px;
+    border-radius: 10px;
+}
+
+.sub-menu{
+    display: none;
+}
+.custom-nav li:hover .sub-menu{
+    display: block;
+    position: absolute;
+    background: rgb(202, 48, 56);
+}
+
+.custom-nav li:hover .sub-menu ul{
+    display: block;
+}
+
+.custom-nav li:hover .sub-menu ul li{
+    width:150px;
+    padding:10px;
+    border-bottom: 1px dotted #fff;
+    background:transparent;
+    border-radius: 0;
+    text-align:left;
+}
+.custom-nav li:hover .sub-menu ul li:last-child{
+    border-bottom: none;
+}
+
+.custom-nav li:hover .sub-menu ul li a:hover{
+    color: #680812;
+}
+
+.footer{
+    background: #303036;
+    color: #d3d3d3;
+    height: 400px;
+}
+.footer .footer-bottom{
+    background: #343a40;
+    color: #686868;
+    height: 50px;
+}
+
+.search-box{
+    margin: 0;
+    padding:0;
+    font-family: sans-serif;
+    box-sizing: border-box;
+
+}
+.search-txt{
+    width: 60px;
+}
+.search-btn{
+    float:right;
+    width: 40px;
+    
+}
+.search-txt{
+    color: white;
+    border: none;
+    background: none;
+    outline: none;
+    float: left;
+    padding: 0;
+    transition: 0.4s;
+}
